# twitch-sub-bot

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  Dockerfile  README.md  TEST_PLAN.md  compose.yml  docker-compose.yml  dockerfile  flake.nix  main.py  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  deploy.yml  devskim.yml  gitleaks.yml  pip-audit.yml  ruff.yml
src/: error.py  main.py
src/twitch_subs/: cli.py  config.py  container.py  errors.py
src/twitch_subs/application/: __init__.py  error.py  event_handlers.py  logins.py  ports.py  reporting.py  watcher.py  watchlist_service.py
src/twitch_subs/domain/: events.py  exceptions.py  mapper.py  models.py  ports.py  protocols.py
src/twitch_subs/infra/events/: __init__.py  rabbitmq_bus.py
src/twitch_subs/infrastructure/: __init__.py  env.py  error.py  error_utils.py  logings.py  logins_provider.py  repository_sqlite.py  state.py  system.py  telegram.py  twitch.py  watchlist.py
src/twitch_subs/infrastructure/event_bus/: __init__.py  in_memory.py  inmemory.py  rabbitmq.py
src/twitch_subs/infrastructure/event_bus/rabbitmq/: __init__.py  bus.py  consumer.py  producer.py  utils.py
src/twitch_subs/infrastructure/notifier/: console.py  telegram.py
src/twitch_subs/infrastructure/telegram/: __init__.py  bot.py  filters.py  notifier.py
tests/: conftest.py  test_cli.py  test_cli_watchlist.py  test_config.py  test_container.py  test_env.py  test_errors.py  test_event_bus.py  test_exceptions.py  test_logins_provider.py  test_models.py  test_ports.py  test_rabbitmq_bus.py  test_reporting.py  test_repository_sqlite.py  test_state.py  test_telegram.py  test_telegram_bot.py  test_twitch.py  test_twitch_client.py  test_watcher.py  test_watchlist_service.py
