[project]
name = "twitch-sub-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "typer>=0.12.3",
    "aiogram>=3.22.0",
    "sqlalchemy>=2.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
